[package]
name = "extypst_nif"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "extypst_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.28.0"
typst = "0.13.1"
typst-library = "0.13.1"
typst-pdf = "0.13.1"
typst-utils = "0.13.1"

# Additional dependencies for typst
comemo = "0.5.0"
elsa = "1.11.2"
once_cell = "1.21.3"
memmap2 = "0.9.7"
same-file = "1.0.6"
siphasher = "1.0.1"
walkdir = "2.5.0"
dirs = "5.0.1"
